# pwrules

./: .gitignore  CLAUDE.md  PLAYBOOK.md  PROGRESS.md  README.md  pyproject.toml
configs/: protocol.yaml  train.yaml
notebooks/: 01_smoke.ipynb  01_smoke.md  02_clean.ipynb  02_clean.md  03_ruleextract.ipynb  03_ruleextract.md  04_conditioning.ipynb  04_conditioning.md  05_train.ipynb  05_train.md  06_generate.ipynb  06_generate.md  07_filter.ipynb  07_filter.md  08_eval.ipynb  08_eval.md  09_ablations.ipynb  09_ablations.md  10_export.ipynb  10_export.md  README.md
pwrules/: __init__.py  config.py  env.py  paths.py
pwrules/clean/: __init__.py  __main__.py
pwrules/conditioning/: __init__.py  __main__.py
pwrules/eval/: __init__.py  __main__.py  ablations.py  baselines.py  figures.py  reporting.py
pwrules/filter/: __init__.py  __main__.py
pwrules/generate/: __init__.py  __main__.py
pwrules/ruleextract/: __init__.py  __main__.py  applier.py  extractor.py
pwrules/train/: __init__.py  __main__.py
tests/: test_ablations.py  test_clean.py  test_conditioning.py  test_env.py  test_eval.py  test_figures.py  test_filter.py  test_generate.py  test_import.py  test_paths.py  test_reporting.py  test_ruleextract.py  test_train.py
